samples/_failures_safe/1761727526_3a5dee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ef6482c.c: In function ‘print_token’:
./samples/SAFE/__tmp_8ef6482c.c:168:9: error: missing terminating " character
  168 |         "
      |         ^
./samples/SAFE/__tmp_8ef6482c.c:168:9: error: expected expression at end of input
./samples/SAFE/__tmp_8ef6482c.c:168:9: error: expected declaration or statement at end of input
